# qml_template

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp
src/ui/: CMakeLists.txt  main.qml  main_window.cpp  main_window.h  qml_template_zh_CN.ts  qt_resource.qrc  update_resource.py
src/ui/qml/: main.qml
src/ui/quick/: CMakeLists.txt  clock.cpp  clock.h  plugin.cpp  plugin.h  qmldir
